@@ -1,0 +1,11 @@
+<h1>CONTRIBUTORS:</h1>
+
+<hr />
+
+<ul>
+<li>Ken Coar <code>&lt;The.Rodent.of.Unusual.Size near GMail.Com&gt;</code>
+Initial creator, author, and maintainer.</li>
+<li><a href="https://www.patreon.com/foundup">Michael Trout</a>,
+<a href="https://www.patreon.com/theRoUS">Patreon sponsor</a></li>
+</ul>
+
