@@ -1,0 +1,7 @@
+# CONTRIBUTORS:
+-------------
+
+* Ken Coar `<The.Rodent.of.Unusual.Size near GMail.Com>`
+  Initial creator, author, and maintainer.
+* [Michael Trout](https://www.patreon.com/foundup),
+  [Patreon sponsor](https://www.patreon.com/theRoUS)
