@@ -1,0 +1,184 @@
+<h1>DumbLogger</h1>
+
+<p><a href="http://badge.fury.io/rb/dumb-logger"><img src="https://badge.fury.io/rb/dumb-logger.svg" alt="Gem Version" /></a></p>
+
+<p><em>As though there weren't enough Ruby gems for logging.. here's another one!</em></p>
+
+<p><code>DumbLogger</code> is a very simple package for logging messages, typically
+for command-line applications.  You simply instantiate the class, set
+the maximum log-level required for messages to be displayed, and
+subsequently invoke the <code>#message</code> method with the text and
+appropriate level associated with it.  If the logger's maximum level
+is greater than or equal to the message's, the text will be written to
+the logging sink.</p>
+
+<p>Alternatively, you can instead treat logging levels as bitmasks
+(<em>e.g.</em>, "bit 3 means log network activity"), and messages will be
+sent to the logging sink if any of the set bits in their mask are also
+set in the logger's mask.</p>
+
+<p>Messages with a loglevel (or mask) of <code>0</code> <strong>always</strong> get written to
+the sink.</p>
+
+<p>By default, <code>DumbLogger</code> uses a sink of <code>$stderr</code>, but you can tell it
+to write messages somewhere else.  If the sink is a file that needs to
+be opened, by default new text will be appended to any existing
+content, but you can cause it to rewind and truncate the file before
+writing.  If you change sinks and the current one was opened as a
+file, it will be closed before switching to the new sink.</p>
+
+<p>Sinks can be filenames, symbols, or streams (instances of <code>IO</code>);
+append-mode doesn't apply to streams.</p>
+
+<p>Two special sink symbols are recognised: <strong>:$stderr</strong> and
+<strong>:$stdout</strong>.  Assigning the logger sink to either of these will
+result in the sink stream being re-evaluated on each and every message
+transmission.  This can be useful if <code>$stderr</code> or <code>$stdout</code> might get
+redirected during application operation.</p>
+
+<p>Text is logged using the <code>#message</code> method, which takes an arbitrary
+number of strings, symbols, integers, and hashes as arguments.</p>
+
+<ul>
+<li>The last integer in the argument list will be used as the message's
+level;</li>
+<li>Any hashes in the argument list will be merged and used as options;
+and</li>
+<li>If the argument contains multiple strings, each one will be written
+on a separate line.</li>
+</ul>
+
+
+<p>Global options that can be set with <code>#new</code> include:</p>
+
+<ul>
+<li>whether files should be opened in append mode;</li>
+<li>whether the logger (in append mode) should always position at
+EOF before writing to the sink;</li>
+<li>whether loglevels are integers or bitmasks;</li>
+<li>what the maximum logging level, or active logging bitmask, is;</li>
+<li>where messages should be sent (the sink); and</li>
+<li>a string that should be prefixed to each line written to the sink.</li>
+</ul>
+
+
+<p>You can define labels (names) for logging level values, so you can use
+them in subsequent calls.  In addition, defining a named level creates
+that method on the instance tied to that level.  That is, these are
+equivalent:</p>
+
+<pre><code>daml = DumbLogger.new(:labels =&gt; { :info =&gt; 0, :debug =&gt; 4 })
+daml.info('Level 0 message')
+daml.debug('Level 4 message')
+
+daml = DumbLogger.new
+daml.message(0, 'Level 0 message')
+daml.message(4, 'Level 4 message')
+</code></pre>
+
+<p>Options that can be set on a per-<code>#message</code> basis include:</p>
+
+<ul>
+<li>loglevel or bitmask for the specific message (overrides any integer
+values passed in the argument list);</li>
+<li>a prefix string specific to the message (temporarily overriding the
+default set at instantiation time);</li>
+<li>whether the sink should be repositioned to EOF before writing (only
+in append mode);</li>
+<li>whether the (last) line of the message should be terminated with a
+newline or not.  (Useful for multi-stage "<code>Doing foo: done</code>" type
+messages.) <strong>Note:</strong> This is done by either including <code>DumbLogger::NO_NL</code>
+in the argument list, or <code>{ :newline =&gt; false }</code> as part of an option
+hash.</li>
+</ul>
+
+
+<h2>Installation</h2>
+
+<p>Add this line to your application's Gemfile:</p>
+
+<pre><code class="ruby">gem('dumb-logger')
+</code></pre>
+
+<p>And then execute:</p>
+
+<pre><code>$ bundle
+</code></pre>
+
+<p>Or install it yourself as:</p>
+
+<pre><code>$ gem install dumb-logger
+</code></pre>
+
+<h2>Usage</h2>
+
+<pre><code class="ruby">require('dumb-logger')
+
+#
+# Create a logger with integer levels, a max level of 5, and
+# everything else defaulted:
+#
+duml = DumbLogger.new(:loglevel =&gt; 5)
+
+#
+# Will not be written to the sink ($stderr):
+#
+duml.message(6, 'Silent message!')
+
+#
+# Will be written to the sink no matter what:
+#
+# =&gt; "Logger started!  Neener, neener!\n"
+#
+duml.message(0, 'Logger started!  Neener, neener!')
+
+#
+# Two lines will be logged with the prefix '[DEMO] ':
+#
+# =&gt; "[DEMO] This is line 1\n[DEMO] This is line 2\n"
+#
+# Note that the default loglevel is 0, which means 'always send'.
+#
+duml.message('This is line 1', { :prefix =&gt; '[DEMO] ' }, 'This is line 2')
+
+#
+# Two lines will be sent to the sink, but the second one will *not*
+# end with a newline:
+#
+# =&gt; "This will destroy your life.\nAre you sure? "
+#
+duml.message(DumbLogger::NO_NL,
+             'This will destroy your life',
+             'Are you sure? ')
+</code></pre>
+
+<h2>Contributing</h2>
+
+<ol>
+<li>Fork it ( https://github.com/RoUS/dumb-logger/fork )</li>
+<li>Create your feature branch (<code>git checkout -b my-new-feature</code>)</li>
+<li>Commit your changes (<code>git commit -am 'Add some feature'</code>)</li>
+<li>Push to the branch (<code>git push origin my-new-feature</code>)</li>
+<li>Create a new Pull Request</li>
+</ol>
+
+
+<h2>Licence</h2>
+
+<p><code>DumbLogger</code> is copyright © 2015 by Ken Coar, and is made available
+under the terms of the Apache Licence 2.0:</p>
+
+<pre><code>   Copyright © 2015 Ken Coar
+
+   Licensed under the Apache License, Version 2.0 (the "License");
+   you may not use this file except in compliance with the License.
+   You may obtain a copy of the License at
+
+       http://www.apache.org/licenses/LICENSE-2.0
+
+   Unless required by applicable law or agreed to in writing, software
+   distributed under the License is distributed on an "AS IS" BASIS,
+   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+   See the License for the specific language governing permissions and
+   limitations under the License.
+</code></pre>
