@@ -1,0 +1,9 @@
+desc('Convert markdown files to HTML')
+task(:markup) do
+  Dir['*.md'].each do |mdname|
+    muname	= mdname.sub(%r!\.md$!, '.html')
+    $stdout.print("Converting #{File.basename(mdname)}:")
+    system("rdiscount < \"#{mdname}\" > \"#{muname}\"")
+    $stdout.puts(' done.')
+  end
+end
