@@ -1,6 +1,10 @@
 ```
 
 %changelog
+* Fri Feb 13 2015 Ken Coar <coar@apache.org> - 
+- Added the Changelog and CONTRIBUTORS files.
+- Added rake task to generate HTML from the markdown files.
+
 * Mon Feb  9 2015 Ken Coar <coar@apache.org> - 
 - Add positioning on first write to sink.  (Needs tests.)
 - Add ability to reposition on *every* write to the sink.  (Needs tests.)
@@ -8,6 +12,7 @@
 - Add tests verifying :newline overrides :return .
 - Override the default #inspect method to conceal internal structures.
   (Needs tests.)
+- Add class methods for declaring Boolean attributes (public or private).
 - Move internal flags to a separate concealed structure, with a class
   method to define them.
 ```
